# from_work

./: CMakeLists.txt  any.cpp  main.cpp  sfinae.cpp  timer.cpp  timer.h  token.txt
